gccida/g1/schedule_insns
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3507:4: error: expected ';' after expression
rtx nonnote_insn; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3507:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3508:4: error: expected ';' after expression
rtx v121; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3508:5: error: use of undeclared identifier 'v121'
rtx v121; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3509:4: error: expected ';' after expression
rtx v122; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3509:5: error: use of undeclared identifier 'v122'
rtx v122; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3512:4: error: expected ';' after expression
rtx v125; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3512:5: error: use of undeclared identifier 'v125'
rtx v125; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3514:4: error: expected ';' after expression
rtx v127; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3514:5: error: use of undeclared identifier 'v127'
rtx v127; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3516:1: error: use of undeclared identifier 'deps_0'
deps_0 *v129; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3516:9: error: use of undeclared identifier 'v129'
deps_0 *v129; // rax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3520:6: error: use of undeclared identifier 'p_pending_read_insns'
rtx *p_pending_read_insns; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3578:6: error: use of undeclared identifier 'v191'
rtx *v191; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3602:1: error: use of undeclared identifier 'deps_0'
deps_0 *old_insns_pa; // [rsp+20h] [rbp-138h] 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3602:9: error: use of undeclared identifier 'old_insns_pa'; did you mean 'old_insns_p'?
deps_0 *old_insns_pa; // [rsp+20h] [rbp-138h] 
        ^~~~~~~~~~~~
        old_insns_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3601:5: note: 'old_insns_p' declared here
int old_insns_p; // [rsp+20h] [rbp-138h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3603:6: error: use of undeclared identifier 'old_insns_pb'; did you mean 'old_insns_p'?
rtx *old_insns_pb; // [rsp+20h] [rbp-138h] 
     ^~~~~~~~~~~~
     old_insns_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3601:5: note: 'old_insns_p' declared here
int old_insns_p; // [rsp+20h] [rbp-138h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3603:5: error: invalid operands to binary expression ('struct rtx_def *' and 'int')
rtx *old_insns_pb; // [rsp+20h] [rbp-138h] 
~~~ ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/sched-rgn.c:3629:4: error: expected ';' after expression
rtx headp; // [rsp+A0h] [rbp-B8h] BYREF 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/schedule_insns/src/obj/sched-rgn.o] Error 1
